2013-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* devtools/gen-avr-lib-tree.sh: De-POSIXify the shell usage, since
	Solaris' /bin/sh is not POSIX-aware.  For the remaining tools,
	their POSIXish variants can be chosen by prepending the PATH with
	/usr/xpg4/bin (doesn't harm for non-Solaris systems), but as for
	the shell this script is running under, the only other option
	were to let autoconf detect it, which is a bit of overkill.

2013-03-29 Mike Rice <mike@mikerice.name>

	* libc/time: (New directory.)
	* include/time.h: (New file.)
	* include/util/eu_dst.h: (New file.)
	* include/util/usa_dst.h: (New file.)

2013-03-19 Joerg Wunsch <joerg.wunsch@atmel.com>

	* devtools/gen-avr-lib-tree.sh: Add ATmega64RFR2, ATmega644RFR2,
	ATmega128RFR2, ATmega1284RFR2, ATmega256RFR2, ATmega2564RFR2
	* configure.ac: (Dito.)
	* doc/api/main_page.dox: Document new device support.
	* doc/api/using-tools.dox: (Dito.)
	* include/avr/io.h: Add hooks for ATmega*RFR2 devices.
	* include/avr/Makefile.am (avr_HEADERS): Add new header files.
	* include/avr/sleep.h: Add sleep modes for ATmega*RFR2 devices.
	* include/avr/wdt.h: Add watchdog support for ATmega*RFR2 devices.
	* include/avr/power.h: Add power management definitions for
	ATmega*RFR2 devices.
	* include/avr/eeprom.h: Add EEPROM definitions for ATmega*RFR2
	devices.
	* include/avr/iom64rfr2.h: (New file.)
	* include/avr/iom644rfr2.h: (New file.)
	* include/avr/iom128rfr2.h: (New file.)
	* include/avr/iom1284rfr2.h: (New file.)
	* include/avr/iom256rfr2.h: (New file.)
	* include/avr/iom2564rfr2.h: (New file.)

2013-01-27  Dmitry Xmelkov  <dmix@gmail.ru>

	Fix for bug #37778: _MemoryBarrier() in cpufunc.h error on compile
	* include/avr/cpufunc.h: Place empty string for asm body. This is
	needed for older GCC versions.
	* tests/simulate/regression/bug-37778.c: New file.
	* NEWS: Add to fixed bug list.

2013-01-10  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	Submitted by Senthil Kumar Selvaraj: