@@ -1,3 +1,9 @@
+2013-04-25 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* devtools/ioreg.pl: (New file.), contributed by Knut
+	Schwichtenberg
+	* devtools/findreg.xsl: (New file.)
+
 2013-04-19 Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* devtools/gen-avr-lib-tree.sh: De-POSIXify the shell usage, since
